--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   "homepage": "https://github.com/netor27/LibraryWebApp#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "mongodb": "^2.2.33"
+    "express-session": "^1.15.6",
+    "mongodb": "^2.2.33",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
