--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express-session": "^1.15.6",
     "mongodb": "^2.2.33",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
